--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
         </div>
     </section>
     <footer>
-        Copyright Ericsson Research 2016
+        Copyright Wilddog 2016
     </footer>
     <script>
     var appid = document.getElementById("appid_txt");
