--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>OpenWebRTC Demo</title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <script src="https://cdn.wilddog.com/js/client/current/wilddog.js"></script>
-    <script src="./lib/WildRTC.js"></script>
+    <script src="./lib/lib-WildRTC.js"></script>
 </head>
 
 <body>
