update readme and test

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>OpenWebRTC Demo</title>
+    <title>WebRTC Demo</title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <script src="https://cdn.wilddog.com/js/client/current/wilddog.js"></script>
     <script src="./lib/lib-WildRTC.js"></script>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="heading">
-            <h2>Simple WebRTC Example</h2>
+            <h2>Wilddog WebRTC Example</h2>
         </div>
         <div id="owr-logo"></div>
     </header>
